# armtest

./: CMakeLists.txt  CmdLog.txt  README.md
src/: conv11_arm.cpp  conv33dw_arm.cpp  conv55_arm.cpp  conv77_arm.cpp  helloworld_main.cpp  mat_pixel_main.cpp  newtest.cpp  timer_example.cpp
src/arm_cpps/: absval_arm.cpp  batchnorm_arm.cpp  conv11_arm.cpp  conv22_arm.cpp  conv33_arm.cpp  conv33dw_arm.cpp  conv44_arm.cpp  conv55_arm.cpp  conv77_arm.cpp  eltwise_arm.cpp  innerproduct_arm.cpp  mat_fill.cpp  mat_substract_mean_normalize.cpp  pooling22_arm.cpp  pooling33_arm.cpp  prelu_arm.cpp  relu_arm.cpp  slice_arm.cpp
tests/aarch64/: aarch64_gtest_main.cpp  test_absval_arm.h  test_batchnorm_arm.h  test_conv11_arm.h  test_conv22_arm.h  test_conv33_arm.h  test_conv33dw_arm.h  test_conv44_arm.h  test_conv55_arm.h  test_conv77_arm.h  test_eltwise_arm.h  test_innerproduct_arm.h  test_mat_fill.h  test_mat_substract_mean_normalize.h  test_pooling22_arm.h  test_pooling33_arm.h  test_prelu_arm.h  test_relu_arm.h  test_slice_arm.h
